@@ -1,3 +1,6 @@
+2002-10-16  Neal Birch <nealbirch@attbi.com>
+	    Modified networking.sh and the CONFIGURE script to take in consideration those who put their network device drivers into the kernel, fixes bug 1308. Corrected usage info to reflect ability to load a specific device or devices.
+
 2002-10-10  Eric Schabell <eschabell@sourcemage.org>
 
 		Removed -H from networking script, fixes bug#1196.
